# estimating_robot_params

./: linear_regression.py  neural_regression.py
06-kuka_full_motion_trajectory/: 06-kuka_full_motion_trajectory.cpp  CMakeLists.txt  kuka_iiwa.urdf  object.urdf  world.urdf
